// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AutomotiveCartSummary /> component its confirmation snapshot matches 1`] = `
.c18 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: none;
  border: none;
  color: #0f62fe;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font: bold 0.875rem/1.125005rem 'IBM Plex Sans',Arial,sans-serif;
  -webkit-letter-spacing: 0.16px;
  -moz-letter-spacing: 0.16px;
  -ms-letter-spacing: 0.16px;
  letter-spacing: 0.16px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c18:hover {
  color: #0043ce;
}

.c18 svg {
  color: #161616;
}

.c17 .price-list {
  color: rgba(22,22,22,0.25);
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

.c14 {
  border-bottom: 0.0625rem solid #f4f4f4;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
}

.c15 {
  padding: 1rem 0;
}

.c16 {
  border-bottom: 0;
  font-weight: 700;
  padding: 1rem 0;
}

.c0 {
  max-width: 74rem;
  padding: 4rem;
  text-align: left;
  display: grid;
  grid-column-gap: 2rem;
  grid-row-gap: 2rem;
  grid-template-columns: 60% 1fr;
  grid-template-rows: repeat(2,1fr);
  max-width: none;
}

.c4 {
  -webkit-flex: 0 0 50%;
  -ms-flex: 0 0 50%;
  flex: 0 0 50%;
  margin-top: 2.75rem;
}

.c4 .cost-title {
  margin-top: 2.25rem;
  text-align: left;
}

.c9 {
  -webkit-flex: 0 0 50%;
  -ms-flex: 0 0 50%;
  flex: 0 0 50%;
  margin-top: 2.75rem;
  margin-top: 0;
}

.c9 .cost-title {
  margin-top: 2.25rem;
  text-align: left;
  margin-top: 0;
}

.c9 .config {
  margin-top: 5.25rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
}

.c1:first-of-type {
  grid-area: 1 / 1 / 2 / 2;
}

.c1:nth-child(2) {
  grid-area: 1 / 2 / 2 / 3;
}

.c1:last-of-type {
  grid-area: 2 / 1 / 3 / 3;
}

.c1 .c3:first-child {
  -webkit-flex: 0 0 60%;
  -ms-flex: 0 0 60%;
  flex: 0 0 60%;
}

.c1 .c3:last-child {
  -webkit-flex: 0 0 40%;
  -ms-flex: 0 0 40%;
  flex: 0 0 40%;
  padding-left: 2rem;
}

.c13:first-of-type {
  grid-area: 1 / 1 / 2 / 2;
}

.c13:nth-child(2) {
  grid-area: 1 / 2 / 2 / 3;
}

.c13:last-of-type {
  grid-area: 2 / 1 / 3 / 3;
}

.c2 {
  display: block;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c6 {
  padding: 0;
}

.c5 {
  font: 700 1.25rem 'IBM Plex Sans',Arial,sans-serif;
}

.c7 {
  font: 400 0.875rem 'IBM Plex Sans',Arial,sans-serif;
  line-height: 1.5rem;
  margin-top: 1rem;
  max-width: 80%;
}

.c8 {
  display: inline;
  font: 700 0.875rem 'IBM Plex Sans',Arial,sans-serif;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 1.5rem;
}

.c12 {
  font: 400 0.875rem 'IBM Plex Sans',Arial,sans-serif;
  margin-left: 1.5rem;
}

.c11 {
  max-width: 3.25rem;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <h2>
        Your car summary
      </h2>
      <div
        class="c3 c4"
      >
        <div
          class="c5"
        >
          Your new car
        </div>
      </div>
      <div
        class="c6"
      >
        <div
          class="c7"
        >
          Estimated delivery date:
          <div
            class="c8"
          >
             
            June 2021
          </div>
        </div>
        <div
          class="c7"
        >
          The original DMC Delorean from the Back to the Future franchise, with the real ability to travel in time and Michael J Fox’s phone number included.
        </div>
      </div>
    </div>
    <div
      class="c3 c9"
    >
      <div
        class="c5 config"
      >
        Your configuration
      </div>
      <div>
        <div
          class="c10"
        >
          <img
            alt="Colour 1"
            class="c11"
            src="/yellow.png"
          />
          <div
            class="c12"
          >
            Colour 1
            : 
            Blue
          </div>
        </div>
        <div
          class="c10"
        >
          <img
            alt="Colour 2"
            class="c11"
            src="/yellow.png"
          />
          <div
            class="c12"
          >
            Colour 2
            : 
            Yellow
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c13"
  >
    <div
      class="c3 c9"
    >
      <h2
        class="cost-title"
      >
        Costs
      </h2>
      <div
        class="c3 c4"
      >
        <div
          class="c5"
        >
          Your finance option
        </div>
        <div
          class="c7"
        >
          Your selected finance option is 
          <strong>
            Cash
          </strong>
        </div>
      </div>
      <div
        class="PriceTablestyles__PriceTable-sc-12x6422-0"
      >
        <div
          class="c14"
        >
          <div
            class="c15"
          >
            Base Price
          </div>
          <div
            class="c16"
          >
            <span
              class="c17"
            >
              <span
                class="prefix"
              >
                +
              </span>
              <span
                class="value"
              >
                £500
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c3 c4"
    >
      <a
        class="c18"
      >
        Terms and conditions
      </a>
      <div
        class="c7"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi utaliquip ex ea commodo consequat. Duis aute irure dolor inreprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur
      </div>
    </div>
    <div
      class="c3 c4"
    >
      <a
        class="c18"
      >
        Legal Disclaimer
      </a>
      <div
        class="c7"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      </div>
    </div>
  </div>
</div>
`;

exports[`<AutomotiveCartSummary /> component its snapshot matches 1`] = `
.c15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: none;
  border: none;
  color: #0f62fe;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font: bold 0.875rem/1.125005rem 'IBM Plex Sans',Arial,sans-serif;
  -webkit-letter-spacing: 0.16px;
  -moz-letter-spacing: 0.16px;
  -ms-letter-spacing: 0.16px;
  letter-spacing: 0.16px;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c15:hover {
  color: #0043ce;
}

.c15 svg {
  color: #161616;
}

.c14 .price-list {
  color: rgba(22,22,22,0.25);
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

.c11 {
  border-bottom: 0.0625rem solid #f4f4f4;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
}

.c12 {
  padding: 1rem 0;
}

.c13 {
  border-bottom: 0;
  font-weight: 700;
  padding: 1rem 0;
}

.c0 {
  max-width: 74rem;
  padding: 4rem;
  text-align: left;
}

.c3 {
  -webkit-flex: 0 0 50%;
  -ms-flex: 0 0 50%;
  flex: 0 0 50%;
  margin-top: 2.75rem;
}

.c3 .cost-title {
  margin-top: 2.25rem;
  text-align: left;
}

.c1:first-of-type {
  grid-area: 1 / 1 / 2 / 2;
}

.c1:nth-child(2) {
  grid-area: 1 / 2 / 2 / 3;
}

.c1:last-of-type {
  grid-area: 2 / 1 / 3 / 3;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 {
  padding: 1.5rem 0 0 1.5rem;
}

.c4 {
  font: 700 1.25rem 'IBM Plex Sans',Arial,sans-serif;
}

.c6 {
  font: 400 0.875rem 'IBM Plex Sans',Arial,sans-serif;
  line-height: 1.5rem;
  margin-top: 1rem;
  max-width: 80%;
}

.c7 {
  display: inline;
  font: 700 0.875rem 'IBM Plex Sans',Arial,sans-serif;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 1.5rem;
}

.c10 {
  font: 400 0.875rem 'IBM Plex Sans',Arial,sans-serif;
  margin-left: 1.5rem;
}

.c9 {
  max-width: 3.25rem;
}

<div
  class="c0"
>
  <h2>
    Your car summary
  </h2>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          Your new car
        </div>
      </div>
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          Estimated delivery date:
          <div
            class="c7"
          >
             
            June 2021
          </div>
        </div>
        <div
          class="c6"
        >
          The original DMC Delorean from the Back to the Future franchise, with the real ability to travel in time and Michael J Fox’s phone number included.
        </div>
      </div>
    </div>
    <div
      class="c3"
    >
      <div
        class="c4 config"
      >
        Your configuration
      </div>
      <div>
        <div
          class="c8"
        >
          <img
            alt="Colour 1"
            class="c9"
            src="/yellow.png"
          />
          <div
            class="c10"
          >
            Colour 1
            : 
            Blue
          </div>
        </div>
        <div
          class="c8"
        >
          <img
            alt="Colour 2"
            class="c9"
            src="/yellow.png"
          />
          <div
            class="c10"
          >
            Colour 2
            : 
            Yellow
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c3"
    >
      <hr />
      <h2
        class="cost-title"
      >
        Costs
      </h2>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          Your finance option
        </div>
        <div
          class="c6"
        >
          Your selected finance option is 
          <strong>
            Cash
          </strong>
        </div>
      </div>
      <div
        class="c6"
      >
        Lorem ipsum dolor sit amet
      </div>
      <div
        class="PriceTablestyles__PriceTable-sc-12x6422-0"
      >
        <div
          class="c11"
        >
          <div
            class="c12"
          >
            Base Price
          </div>
          <div
            class="c13"
          >
            <span
              class="c14"
            >
              <span
                class="prefix"
              >
                +
              </span>
              <span
                class="value"
              >
                £500
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c3"
    >
      <a
        class="c15"
      >
        Terms and conditions
      </a>
      <div
        class="c6"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi utaliquip ex ea commodo consequat. Duis aute irure dolor inreprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur
      </div>
    </div>
    <div
      class="c3"
    >
      <a
        class="c15"
      >
        Legal Disclaimer
      </a>
      <div
        class="c6"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
      </div>
    </div>
  </div>
</div>
`;
